# Wnba-quant

./: .gitignore  README.md  pyproject.toml
src/prop_engine/: ingestion.py  math_utils.py  models.py  pipeline.py
src/wnba_quant/: __init__.py  cli.py  config.py  distributions.py  features.py  models.py  odds.py  pipeline.py
src/wnba_quant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dummy.sh  test_pipeline.py  test_prop_engine.py
